tests/ui/type/type-check/cannot_infer_local_or_array.rs
fn main() {
    let x = []; //~ ERROR type annotations needed
}
